--- a/Cohesion_DAO/Cohesion_DAO.csproj
+++ b/Cohesion_DAO/Cohesion_DAO.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ship_DAO.cs" />
     <Compile Include="Util\Helper.cs" />
     <Compile Include="Util\LoggingUtility.cs" />
   </ItemGroup>
