--- a/Cohesion_DTO/Cohesion_DTO.csproj
+++ b/Cohesion_DTO/Cohesion_DTO.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesOrder_DTO.cs" />
     <Compile Include="Util\ComboUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
