--- a/Cohesion_Project/App.config
+++ b/Cohesion_Project/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="DB" connectionString="Server=anypoint.iptime.org,11433;Uid=team1;Pwd=team1$$;Database=TEAM1"/>
+	</connectionStrings>
 </configuration>
