--- a/Cohesion_DTO/Cohesion_DTO.csproj
+++ b/Cohesion_DTO/Cohesion_DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PRODUCT_OPERATION_REL_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesOrder_DTO.cs" />
     <Compile Include="Util\ComboUtil.cs" />
