--- a/Cohesion_DTO/Cohesion_DTO.csproj
+++ b/Cohesion_DTO/Cohesion_DTO.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LOTState_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesOrder_DTO.cs" />
+    <Compile Include="Ship_DTO.cs" />
     <Compile Include="Util\ComboUtil.cs" />
     <Compile Include="WORK_ORDER_MST_DTO.cs" />
   </ItemGroup>
