--- a/Cohesion_DTO/Cohesion_DTO.csproj
+++ b/Cohesion_DTO/Cohesion_DTO.csproj
@@ -41,12 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EQUIPMENT_MST_DTO.cs" />
+    <Compile Include="EQUIPMENT_OPERATION_REL_DTO.cs" />
     <Compile Include="LOT_DEFECT_HIS_DTO.cs" />
     <Compile Include="LOT_END_HIS_DTO.cs" />
     <Compile Include="LOT_HIS_DTO.cs" />
     <Compile Include="LOT_INSPECT_HIS_DTO.cs" />
     <Compile Include="LOT_MATERIAL_HIS_DTO.cs" />
     <Compile Include="LOT_STS_DTO.cs" />
+    <Compile Include="OPERATION_MST_DTO.cs" />
     <Compile Include="PRODUCT_OPERATION_REL_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesOrder_DTO.cs" />
