--- a/Cohesion_Project/Cohesion_Project.csproj
+++ b/Cohesion_Project/Cohesion_Project.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Base\Frm_BasePop.Designer.cs">
       <DependentUpon>Frm_BasePop.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_MateriarFlag.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_MateriarFlag.Designer.cs">
+      <DependentUpon>Frm_MateriarFlag.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_InspectFlag.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,12 +110,6 @@
     </Compile>
     <Compile Include="Frm_WorkEnd.Designer.cs">
       <DependentUpon>Frm_WorkEnd.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Frm_Materiar.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_Materiar.Designer.cs">
-      <DependentUpon>Frm_Materiar.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_LookUp.cs">
       <SubType>Form</SubType>
@@ -198,6 +198,9 @@
     <EmbeddedResource Include="Base\Frm_BasePop.resx">
       <DependentUpon>Frm_BasePop.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frm_MateriarFlag.resx">
+      <DependentUpon>Frm_MateriarFlag.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_InspectFlag.resx">
       <DependentUpon>Frm_InspectFlag.cs</DependentUpon>
     </EmbeddedResource>
@@ -212,9 +215,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_WorkEnd.resx">
       <DependentUpon>Frm_WorkEnd.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_Materiar.resx">
-      <DependentUpon>Frm_Materiar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_LookUp.resx">
       <DependentUpon>Frm_LookUp.cs</DependentUpon>
