--- a/Cohesion_DAO/Cohesion_DAO.csproj
+++ b/Cohesion_DAO/Cohesion_DAO.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Flag_DAO.cs" />
     <Compile Include="Order_DAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Purchase_DAO.cs" />
     <Compile Include="Ship_DAO.cs" />
     <Compile Include="Util\Helper.cs" />
     <Compile Include="Util\LoggingUtility.cs" />
