--- a/Cohesion_DTO/Cohesion_DTO.csproj
+++ b/Cohesion_DTO/Cohesion_DTO.csproj
@@ -57,8 +57,10 @@
     <Compile Include="OPERATION_MST_DTO.cs" />
     <Compile Include="PRODUCT_OPERATION_REL_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PURCHASE_ORDER_MST_DTO.cs" />
     <Compile Include="SalesOrder_DTO.cs" />
     <Compile Include="Ship_DTO.cs" />
+    <Compile Include="STORE_MST_DTO.cs" />
     <Compile Include="Util\ComboUtil.cs" />
     <Compile Include="WORK_ORDER_MST_DTO.cs" />
   </ItemGroup>
