--- a/Cohesion_Project/Cohesion_Project.csproj
+++ b/Cohesion_Project/Cohesion_Project.csproj
@@ -174,6 +174,7 @@
     </Compile>
     <Compile Include="Service\Srv_Flag.cs" />
     <Compile Include="Service\Srv_Order.cs" />
+    <Compile Include="Service\Srv_Purchase.cs" />
     <Compile Include="Service\Srv_Ship.cs" />
     <Compile Include="Service\Srv_Work.cs" />
     <Compile Include="Uc\Cc_TabControl.cs">
