--- a/Cohesion_Project/Cohesion_Project.csproj
+++ b/Cohesion_Project/Cohesion_Project.csproj
@@ -173,6 +173,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Service\Srv_Flag.cs" />
+    <Compile Include="Service\Srv_LookUp.cs" />
     <Compile Include="Service\Srv_Order.cs" />
     <Compile Include="Service\Srv_Ship.cs" />
     <Compile Include="Service\Srv_Work.cs" />
