--- a/Cohesion_DAO/Cohesion_DAO.csproj
+++ b/Cohesion_DAO/Cohesion_DAO.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common_DAO.cs" />
+    <Compile Include="EDown_DAO.cs" />
     <Compile Include="Flag_DAO.cs" />
     <Compile Include="Inspect_DAO.cs" />
     <Compile Include="LookUp_DAO.cs" />
